--- a/lockwatch2prefs/Resources/de.lproj/index.html
+++ b/lockwatch2prefs/Resources/de.lproj/index.html
@@ -29,7 +29,20 @@
 	
 	<body>
 		<article class="markdown-body">
-			<h2>Version 2.0-b2</h2>
+			<h2>Version 2.0b2-1</h2>
+			<p><small>2. April 2020</small></p>
+			
+			<p>Dies ist ein Hotfix-Release, um einige von der Community gemeldeten Probele zu beheben.</p>
+			
+			<ul>
+				<li>Behebt einen Absturz der auftritt, wenn die Superview-Hierarchie eines CALayer-Objekts geladen wird.</li>
+				<li>Fügt eine Option hinzu, die den Hintergrund der Zifferblätter entfernt. (Standard: Aus)</li>
+				<li>Fügt eine Option hinzu, die den aktuellen Batterieladestand auf dem Sperrbildschirm entfernt. (Standard: An)</li>
+			<ul>
+		</article>
+		
+		<article class="markdown-body">
+			<h2>Version 2.0b2</h2>
 			<p><small>25. März 2020</small></p>
 			
 			<p>LockWatch 2 Beta 2 ist eine vollständige Neufassung von Beta 1. Während Beta 1 den Fokus nur darauf gelegt hat, alles zum Laufen zu bringen und zu zeigen, was in zukünftigen Build möglich ist, wurde Beta 2 von Grund auf neu entwickelt, überwiegend um bestehende Fehler zu beheben und neue Features hinzuzufügen. Tatsächlich wurde so viel geändert, dass ich wahrscheinlich keinen vollständigen Changelog zu Verfügung stellen kann.</p>
@@ -48,7 +61,7 @@
 		</article>
 		
 		<article class="markdown-body">
-			<h2>Version 2.0-b1</h2>
+			<h2>Version 2.0b1</h2>
 			<p><small>21. Januar 2020</small></p>
 
 			<p>Willkommen zur ersten Beta von LockWatch 2!</p>
