--- a/lockwatch2prefs/Resources/en.lproj/index.html
+++ b/lockwatch2prefs/Resources/en.lproj/index.html
@@ -29,7 +29,20 @@
 	
 	<body>
 		<article class="markdown-body">
-			<h2>Version 2.0-b2</h2>
+			<h2>Version 2.0b2-1</h2>
+			<p><small>April 2, 2020</small></p>
+			
+			<p>This is a hotfix release to fix a few reported issues by the community.</p>
+			
+			<ul>
+				<li>Fixed a crash while getting a CALayer's parent view hierarchy.</li>
+				<li>Added an option to hide the watch face background. (disabled by default)</li>
+				<li>Added an option to hide the lock screen battery charging view. (enabled by default)</li>
+			<ul>
+		</article>
+		
+		<article class="markdown-body">
+			<h2>Version 2.0b2</h2>
 			<p><small>March 25, 2020</small></p>
 			
 			<p>LockWatch 2 Beta 2 is a complete rewrite of Beta 1. While Beta 1 was just focussing on getting things up and running and showing what's possible in future builds, Beta 2 has been developed from scratch, mostly to fix existing bugs and add new features. So much has changed actually, I may not be able to provide a full changelog.</p>
@@ -47,7 +60,7 @@
 		</article>
 		
 		<article class="markdown-body">
-			<h2>Version 2.0-b1</h2>
+			<h2>Version 2.0b1</h2>
 			<p><small>January 21, 2020</small></p>
 
 			<p>Welcome to the very first beta of LockWatch 2!</p>
