--- a/lockwatch2prefs/Resources/de.lproj/index.html
+++ b/lockwatch2prefs/Resources/de.lproj/index.html
@@ -29,6 +29,16 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b2-2</h2>
+			<p><small>2. April 2020</small></p>
+			
+			<ul>
+				<li>Behebt ein Problem, dass verhindert, dass Zifferblätter angepasst werden können, wenn die 3D-Touch-Empfindlichkeit auf "Fest" eingestellt wurde.</li>
+				<li>Behebt ein Problem, dass dazu führt, dass LockWatch über der Detailansicht einer Benachrichtigung dargestellt wird.</li>
+			<ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b2-1</h2>
 			<p><small>2. April 2020</small></p>
 			
