--- a/lockwatch2prefs/Resources/en.lproj/index.html
+++ b/lockwatch2prefs/Resources/en.lproj/index.html
@@ -29,6 +29,16 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b2-2</h2>
+			<p><small>April 2, 2020</small></p>
+			
+			<ul>
+				<li>Fixed an issue that prevented watch face editing if a user had set their 3D Touch sensitivity to "Firm".</li>
+				<li>Fixed an issue that caused watch faces to appear above notification detail views.</li>
+			<ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b2-1</h2>
 			<p><small>April 2, 2020</small></p>
 			
