--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -30,6 +30,32 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b2-2</h2>
+			<p><small>19. April 2020</small></p>
+			
+			<p>LockWatch Beta 3 ist da, und sie enthält endlich die lang ersehnten Komplikationen. Diese Beta enthält den ersten Satz funktionierender Komplikationen, die später durch nachfolgende Updates erweitert werden. Darunter befinden sich:</p>
+			
+			<ul>
+				<li>Batterie</li>
+				<li>Datum</li>
+				<li>Digitale Uhrzeit</li>
+				<li>Jetzt läuft</li>
+				<li>Aktivität</li>
+				<li>Weltuhr</li>
+			</ul>
+			
+			<p>Neben den Komplikationen enthält Beta 3 außerdem folgende Verbesserungen:<p>
+			
+			<ul>
+				<li>Fügt eine Sicherheitsmaßnahme hinzu, damit Zifferblätter nur gewechselt/angepasst werden können, wenn das Gerät entsperrt ist.</li>
+				<li>Behebt einen Fehler, bei dem Zifferblätter auf Eingaben außerhalb des Containers reagieren.</li>
+				<li>Ersetzt UIVisualEffectView mit MTMaterialView, um mehr wie iOS 13 zu erscheinen.</li>
+				<li>Performance-Verbesserungen.</li>
+				<li>Verbesserungen der Übersetzung.</li>
+			<ul>
+		</article>
+		
+		<article class="markdown-body">
+			<h2>Version 2.0b2-2</h2>
 			<p><small>2. April 2020</small></p>
 			
 			<ul>
