Fixed incorrect version

--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,7 +29,7 @@
 	
 	<body>
 		<article class="markdown-body">
-			<h2>Version 2.0b2-2</h2>
+			<h2>Version 2.0b3</h2>
 			<p><small>April 19, 2020</small></p>
 			
 			<p>LockWatch beta 3 is here, and it finally introduces the long awaited Complications. This beta contains the first batch of working complications, with more complications being added in subsequent updates, including the following:</p>
@@ -46,7 +46,6 @@
 			<p>Apart from complications, beta 3 includes the following fixes and improvements:<p>
 			
 			<ul>
-				<li>Fügt eine Sicherheitsmaßnahme hinzu, damit Zifferblätter nur gewechselt/angepasst werden können, wenn das Gerät entsperrt ist.</li>
 				<li>Added a security measurement so you can only switch/customize watch faces when your device is unlocked.</li>
 				<li>Fixed watch faces reacting to input outside of the main container view.</li>
 				<li>Replaced UIVisualEffectViews with MTMaterialViews to appear more like iOS 13.</li>
