--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,7 +29,7 @@
 	
 	<body>
 		<article class="markdown-body">
-			<h2>Version 2.0b2-2</h2>
+			<h2>Version 2.0b3</h2>
 			<p><small>19. April 2020</small></p>
 			
 			<p>LockWatch Beta 3 ist da, und sie enthält endlich die lang ersehnten Komplikationen. Diese Beta enthält den ersten Satz funktionierender Komplikationen, die später durch nachfolgende Updates erweitert werden. Darunter befinden sich:</p>
