--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -32,7 +32,7 @@
 			<h2>Version 2.0b3</h2>
 			<p><small>19. April 2020</small></p>
 			
-			<p>LockWatch Beta 3 ist da, und sie enthält endlich die lang ersehnten Komplikationen. Diese Beta enthält den ersten Satz funktionierender Komplikationen, die später durch nachfolgende Updates erweitert werden. Darunter befinden sich:</p>
+			<p>LockWatch 2 Beta 3 ist da, und sie enthält endlich die lang ersehnten Komplikationen. Diese Beta enthält den ersten Satz funktionierender Komplikationen, die später durch nachfolgende Updates erweitert werden. Darunter befinden sich:</p>
 			
 			<ul>
 				<li>Batterie</li>
@@ -59,7 +59,7 @@
 			<p><small>2. April 2020</small></p>
 			
 			<ul>
-				<li>Behebt ein Problem, dass verhindert, dass Zifferblätter angepasst werden können, wenn die 3D-Touch-Empfindlichkeit auf "Fest" eingestellt wurde.</li>
+				<li>Behebt ein Problem, dass verhindert, dass Zifferblätter angepasst werden können, wenn die 3D-Touch-Empfindlichkeit auf „Fest“ eingestellt wurde.</li>
 				<li>Behebt ein Problem, dass dazu führt, dass LockWatch über der Detailansicht einer Benachrichtigung dargestellt wird.</li>
 			<ul>
 		</article>
@@ -90,7 +90,7 @@
 				<li>Einstellungen: Ausgewählte Zifferblätter werden nicht länger zuruückgesetzt. Außerdem kann man nun auswählen, welche Apple Watch simuliert werden soll, sofern überhaupt eine simuliert werden soll.</li>
 				<li>Zifferblatt-Verwaltung: Füge neue Zifferblätter hinzu, ändere ihre Reihenfolge oder lösche sie, direkt vom Sperrbildschirm aus. Außerdem können die Zifferblätter jetzt auf Werkseinstellungen zurückgesetzt werden.</li>
 				<li>Anpassen: Passe jedes unterstützte Zifferblatt nach deinem Geschmack an. Direkt vom Sperrbildschirm aus.</li>
-				<li>"Watch"-Integration (exklusiv für iPhone): Synchronisiere die Zifferblätter und ihre Anpassungen auf dem Sperrbildschirm mit denen auf deiner Uhr. Oder füge ein neues Zifferblatt vom Tab "Zifferblätter" hinzu.</li>
+				<li>„Watch“-Integration (exklusiv für iPhone): Synchronisiere die Zifferblätter und ihre Anpassungen auf dem Sperrbildschirm mit denen auf deiner Uhr. Oder füge ein neues Zifferblatt vom Tab „Zifferblätter“ hinzu.</li>
 				<li>So. viele. Layout-Fixes. Tatsächlich wurde jeder Layout-Fehler (soweit bekannt) aus Beta 1 behoben, und es gibt so gut wie keine Grafikfehler mehr (zumindest so weit ich das getestet habe).</li>
 				<li>Hab ich eigentlich schon erwähnt, dass der Stromverbrauch drastisch reduziert wurde?</li>
 			<ul>
