--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -32,7 +32,7 @@
 			<h2>Version 2.0b3</h2>
 			<p><small>April 19, 2020</small></p>
 			
-			<p>LockWatch beta 3 is here, and it finally introduces the long awaited Complications. This beta contains the first batch of working complications, with more complications being added in subsequent updates, including the following:</p>
+			<p>LockWatch 2 beta 3 is here, and it finally introduces the long awaited Complications. This beta contains the first batch of working complications, with more complications being added in subsequent updates, including the following:</p>
 			
 			<ul>
 				<li>Battery</li>
