--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -46,6 +46,7 @@
 			<ul>
 				<li>Fügt Onboarding & Post-Update-Benachrichtigungen hinzu. Onboarding führt neue und bestehende Nutzer in die Funktionen von LockWatch 2 ein, während Post-Update-Benachrichtigungen die Änderungen eines Updates beschreiben.</li>
 				<li>Fügt Layout-Kompatibilität für <a href="cydia://package/com.cemck.photon">Photon</a> hinzu.</li>
+				<li>Fügt Unterstützung für Video-basierte Zifferblätter hinzu (Beta). Die benötigten Resourcen werden nicht mit LockWatch 2 mitgeliefert.</li>
 				<li>Für Zifferblätter kann nun zwischen „Aus“, „Durchsichtig“ oder „Schwarz“ als Hintergrund gewählt werden.</li>
 				<li>Behebt einen Absturz, der beim Ändern der Systemsprache oder der Einstellung „Fetter Text“ auftrat.</li>
 				<li>Behebt Layout-Probleme auf iPhones im Querformat (Landscape).</li>
