--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -47,6 +47,7 @@
 				<li>Adds onboarding and post-update notifications. Onboarding introduces new and existing users to the capabilities of LockWatch 2, while post-update notifications tell you what changed in an update.</li>
 				<li>Adds layout compatibility for <a href="cydia://package/com.cemck/photon">Photon</a>.</li>
 				<li>Adds support for video-based watch faces (beta). Required assets won't be shipped with LockWatch 2.</li>
+				<li>Adds support for light wallpapers.</li>
 				<li>You can now select between "Off", "Translucent" or "Solid Black" as the watch face background.</li>
 				<li>Fixes a crash that occured when selecting a system language or changing "Bold Fonts".</li>
 				<li>Fixes layout issues on iPhone in landscape mode.</li>
