Added watch face interactivity

--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -44,6 +44,17 @@
 			
 			<p>Additionally, this update contains the following bug fixes and improvements:</p>
 			<ul>
+				<li>
+					Complications are finally useful! Supported complications will now open their assigned app or invoke their assigned actions.
+					<ul>
+						<li>Battery: Tapping will toggle Low Power Mode</li>
+						<li>Date: Opens the Calendar app, showing today's events</li>
+						<li>Now Playing: Opens the app that's currently playing music</li>
+						<li>Weather complications will open the Weather app showing current conditions</li>
+						<li>Activity: Opens the Activity app and shows the current Activity ring progress</li>
+						<li>World Clock: Opens the Clock app and shows configured world clocks</li>	
+					</ul>
+				</li>
 				<li>Adds onboarding and post-update notifications. Onboarding introduces new and existing users to the capabilities of LockWatch 2, while post-update notifications tell you what changed in an update.</li>
 				<li>Adds layout compatibility for <a href="cydia://package/com.cemck/photon">Photon</a>.</li>
 				<li>Adds support for video-based watch faces (beta). Required assets won't be shipped with LockWatch 2.</li>
