--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -44,6 +44,17 @@
 			
 			<p>Außerdem enthält diese Version die folgenden Verbesserungen und Fehlerbehebungen:</p>
 			<ul>
+				<li>
+					Komplikationen sind jetzt endlich nützlich! Unterstützte Komplikationen öffnen nun ihre dazugehörigen Apps oder führen die ihnen zugewiesenen Aktionen aus.
+					<ul>
+						<li>Batterie: Schaltet den Stromsparmodus ein bzw. aus</li>
+						<li>Datum: Öffnet die Kalender-App mit den Ereignissen für das aktuelle Datum</li>
+						<li>Jetzt läuft: Öffnet die App, die derzeit Musik spielt</li>
+						<li>Wetter-Komplikationen öffnen die Wetter-App mit der aktuellen Vorhersage</li>
+						<li>Aktivität: Öffnet die App „Aktivität“ und zeigt den aktuellen Fortschritt der Aktivitätsringe an</li>
+						<li>Weltuhr: Öffnet die App „Uhr“ und zeigt die konfigurierten Weltuhren an</li>
+					</ul>
+				</li>
 				<li>Fügt Onboarding & Post-Update-Benachrichtigungen hinzu. Onboarding führt neue und bestehende Nutzer in die Funktionen von LockWatch 2 ein, während Post-Update-Benachrichtigungen die Änderungen eines Updates beschreiben.</li>
 				<li>Fügt Layout-Kompatibilität für <a href="cydia://package/com.cemck.photon">Photon</a> hinzu.</li>
 				<li>Fügt Unterstützung für Video-basierte Zifferblätter hinzu (Beta). Die benötigten Resourcen werden nicht mit LockWatch 2 mitgeliefert.</li>
