--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u1</h2>
-			<p><small>Juli 2020</small></p>
+			<p><small>24. Juli 2020</small></p>
 			
 			<p>Nachdem ihr (eigentlich viel zu) lange darauf warten musstet, ist hier das erste Update für LockWatch 2 Beta 3. Neben einigen allgemeinen Verbesserungen (mehr dazu später) bringt dieses Update endlich neue Komplikationen mit sich. Mit diesem Update erhält LockWatch 2 endlich die „großen 5“ Wetter-Komplikationen. Hier eine vollständige Liste der hinzugefügten Komplikationen:</p>
 			
@@ -77,6 +77,7 @@
 				<li>Die Wetter-Komplikationen werden aufgrund fehlender Frameworks dezeit nicht auf iPad unterstützt.</li>
 				<li>Die Komplikation „UV-Index“ kann zu Layout-Fehlern führen, wenn sie mit dem Zifferblatt „Infograph Modular“ verwendet wird. Dies passiert übrigens auch ohne LockWatch als Datenquelle. thx apple.</li>
 				<li>Wetter-Komplikationen werden nach einem Neustart möglicherweise nicht automatisch aktualisiert.<br><strong>Workaround</strong>: Wetterdaten über das Widget „Wetter“ laden und LockWatch erneut anzeigen.</li>
+				<li>Die Komplikation „Batterie“ zeigt möglicherweise eine falsche Farbe beim Ein-/Ausschalten des Stromsparmodus.</li>
 			</ul>
 		</article>
 		
