--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u1</h2>
-			<p><small>July 2020</small></p>
+			<p><small>July 24, 2020</small></p>
 			
 			<p>After you had to wait for it (way too long), the first update for LockWatch 2 Beta 3 is here. Including general improvements (more on that later), this update includes the "big 5" Weather complications. Here's a list of every complication added in this update:</p>
 			
@@ -78,6 +78,7 @@
 				<li>The "UV Index" complication may cause layout issues when used with the "Infograph Modular" face. This does, in fact, also happen without LockWatch as a data source. thx apple.</li>
 				<li>Weather complications may not be updated automatically after restarting.<br><strong>Workaround</strong>: Load weather data using the stock "Weather" widget and display LockWatch again.</li>
 				<li>Some weather conditions may be displayed with incorrect colors. This issue is caused by Apple, and fixing it requires a lot of work.</li>
+				<li>The complication "Battery" may show incorrect colors when toggling Low Power Mode.</li>
 		</article>
 		<article class="markdown-body">
 			<h2>Version 2.0b3</h2>
