--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,6 +29,54 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b3-u2</h2>
+			<p><small>August 2020</small></p>
+			
+			<p>Dieses Update enthält neben vielen Verbesserungen auch unzählige neue Komplikationen. Außerdem wurden bereits bestehende Komplikationen teilweise überarbeitet, um einige Fehler zu beheben.</p>
+			
+			<ul>
+				<li>
+					<span>Unzählige neue Komplikationen, sowohl Launcher als auch Datenquellen:</span>
+					<ul>
+						<li>Wecker</li>
+						<li>Astrononmie (Erde, Mond, Sonnensystem)</li>
+						<li>Kalender</li>
+						<li>Mobiles Netz</li>
+						<li>Wo ist?</li>
+						<li>Home</li>
+						<li>Mail</li>
+						<li>Karten</li>
+						<li>Nachrichten</li>
+						<li>Musik</li>
+						<li>News (nur Launcher)</li>
+						<li>Kontakte</li>
+						<li>Telefon</li>
+						<li>Podcasts</li>
+						<li>Radio</li>
+						<li>Regen</li>
+						<li>Erinnerungen (nur Launcher)</li>
+						<li>Remote</li>
+						<li>Siri</li>
+						<li>Sonne</li>
+						<li>Timer</li>
+						<li>Sprachmemos</li>
+					</ul>
+				</li>
+				<li>LockWatch 2 kann jetzt endlich frei positioniert werden. Dazu einfach in den Einstellungen unter „Erweitert“ die Positionen für Hoch- und Querformat anpassen.</li>
+				<li>Die Komplikation „Jetzt läuft“ wurde erweitert und unterstützt jetzt die Komplikationen „Musik“, „Podcasts“ und „Radio“. Außerdem wurde der Indikator für laufende Musik hinzugefügt.</li>
+				<li>Die Nike- und Hermès-Zifferblätter werden jetzt nicht mehr ganz oben in der Liste verfügbarer Zifferblätter angezeigt.</li>
+				<li>Behebt einen Absturz, wenn Zifferblätter verschoben werden.</li>
+				<li>Behebt den Fehler, dass die Zifferblatt-Bibliothek steckenbleibt, wenn das Gerät entsperrt wird während "Neu" ausgewählt ist.</li>
+				<li>Behebt den Fehler, dass Photon die Zifferblatt-Bibliothek nicht automatisch verlässt.</li>
+				<li>Behebt den Fehler, dass die Komplikation „Batterie“ beim Laden im Stromsparmodus die falsche Farbe anzeigt.</li>
+				<li>Behebt den Fehler, dass Zifferblätter gelöscht werden können, obwohl sich der Benutzer nicht in der Zifferblatt-Bibliothek befindet.</li>
+				<li>Behebt den Fehler, dass ein Zifferblatt nicht ausgewählt wird, wenn es angepasst wird.</li>
+				<li>Verbesserungen beim Wechsel zwischen einer simulierten und einer physischen Apple Watch.</li>
+				<li>Layout-Verbesserungen.</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b3-u1</h2>
 			<p><small>24. Juli 2020</small></p>
 			
