--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,6 +29,54 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b3-u2</h2>
+			<p><small>August 2020</small></p>
+
+			<p>This update includes a bunch of fixes and improvements, and a truckload of new complications. Some existing complications have been reworked to fix a few issues.</p>
+			
+			<ul>
+				<li>
+					<span>A truckload of new complications, both launchers and data sources:</span>
+					<ul>
+						<li>Alarm</li>
+						<li>Astrononmy (Earth, Moon, Solar System)</li>
+						<li>Calendar</li>
+						<li>Cellular Data</li>
+						<li>Find My</li>
+						<li>Home</li>
+						<li>Mail</li>
+						<li>Maps</li>
+						<li>Messages</li>
+						<li>Music</li>
+						<li>News (Launcher only)</li>
+						<li>People</li>
+						<li>Phone</li>
+						<li>Podcasts</li>
+						<li>Radio</li>
+						<li>Rain</li>
+						<li>Reminders (Launcher only)</li>
+						<li>Remote</li>
+						<li>Siri</li>
+						<li>Solar</li>
+						<li>Timer</li>
+						<li>Voice Memos</li>
+					</ul>
+				</li>
+				<li>LockWatch 2 can finally be positioned everywhere you want. Just set the positions for Portrait and Landscape modes undes Settings → "Advanced".</li>
+				<li>The "Now Playing" complication has been extended and now supports "Music", "Podcasts" and "Radio". Also, there's finally a now playing indicator.</li>
+				<li>Nike and Hermès watch faces won't be listed at the top of available watch faces anymore.</li>
+				<li>Fixes a crash when moving watch faces.</li>
+				<li>Fixes an issue where the watch face library gets stuck when the device is unlocked while "New" is selected.</li>
+				<li>Fixes an issue where Photon wouldn't make LockWatch 2 exit the watch face library automatically.</li>
+				<li>Fixes an issue where the "Battery" complication shows an incorrect color while charging with Low Power Mode enabled.</li>
+				<li>Fixes an issue where the user could delete watch faces outside of the switcher.</li>
+				<li>Fixes an issue where a watch face isn't selected when it's being customized.</li>
+				<li>Improved switching between an emulated and a physical Apple Watch.</li>
+				<li>Layout improvements.</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b3-u1</h2>
 			<p><small>July 24, 2020</small></p>
 			
