Updated release date

--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
-			<p><small>August 2020</small></p>
+			<p><small>24. August 2020</small></p>
 			
 			<p>Dieses Update enthält neben vielen Verbesserungen auch unzählige neue Komplikationen. Außerdem wurden bereits bestehende Komplikationen teilweise überarbeitet, um einige Fehler zu beheben.</p>
 			
