--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
-			<p><small>August 2020</small></p>
+			<p><small>August 24, 2020</small></p>
 
 			<p>This update includes a bunch of fixes and improvements, and a truckload of new complications. Some existing complications have been reworked to fix a few issues.</p>
 			
