Updated release date

--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
-			<p><small>August 2020</small></p>
+			<p><small>24. August 2020</small></p>
 			
 			<p>Dieses Update enthält neben vielen Verbesserungen auch unzählige neue Komplikationen. Außerdem wurden bereits bestehende Komplikationen teilweise überarbeitet, um einige Fehler zu beheben.</p>
 			
@@ -71,6 +71,7 @@
 				<li>Behebt den Fehler, dass die Komplikation „Batterie“ beim Laden im Stromsparmodus die falsche Farbe anzeigt.</li>
 				<li>Behebt den Fehler, dass Zifferblätter gelöscht werden können, obwohl sich der Benutzer nicht in der Zifferblatt-Bibliothek befindet.</li>
 				<li>Behebt den Fehler, dass ein Zifferblatt nicht ausgewählt wird, wenn es angepasst wird.</li>
+				<li>Behebt den Fehler, dass sich der Bildschirm nach der Interaktion mit LockWatch nicht ausschaltet.</li>
 				<li>Verbesserungen beim Wechsel zwischen einer simulierten und einer physischen Apple Watch.</li>
 				<li>Layout-Verbesserungen.</li>
 			</ul>
