--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -30,7 +30,7 @@
 	<body>
 		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
-			<p><small>August 2020</small></p>
+			<p><small>August 24, 2020</small></p>
 
 			<p>This update includes a bunch of fixes and improvements, and a truckload of new complications. Some existing complications have been reworked to fix a few issues.</p>
 			
@@ -71,6 +71,7 @@
 				<li>Fixes an issue where the "Battery" complication shows an incorrect color while charging with Low Power Mode enabled.</li>
 				<li>Fixes an issue where the user could delete watch faces outside of the switcher.</li>
 				<li>Fixes an issue where a watch face isn't selected when it's being customized.</li>
+				<li>Fixes an issue where the display wouldn't turn off after interacting with LockWatch.</li>
 				<li>Improved switching between an emulated and a physical Apple Watch.</li>
 				<li>Layout improvements.</li>
 			</ul>
