Fixed incorrect paths

--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,6 +29,29 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b4-u1</h2>
+			<p><small>7. September 2020</small></p>
+			
+			<p>Dieser Build behebt den Fehler, dass sich Einstellungen unerwartet zurücksetzen, weil einige Pfade bestimmt für den iOS-Simulator mit denen für die Release-Version verwechselt wurden.</p>
+		</article>
+		
+		<article class="markdown-body">
+			<h2>Version 2.0b4</h2>
+			<p><small>7. September 2020</small></p>
+			
+			<p>Mit Beta 4 ist LockWatch 2 nun offiziell "feature complete". Danke an all diejenigen, die während der Beta-Phase bisher Fehler gemeldet haben! Durch euch ist LockWatch so gut wie perfekt! Mit dieser Beta kommen nun die letzen beiden Funktionen dazu: Drittanbieter-Zifferblätter, sowie das Teilen von Zifferblättern, inspiriert von watchOS 7.</p>
+			
+			<ul>
+				<li>Unterstützung für Drittanbieter-Zifferblätter! Zifferblätter von Drittanbietern können jetzt ganz einfach über den Paketmanager eurer Wahl installiert werden. Mit „Binär“ kehrt außerdem nun eines der ersten externen Zifferblätter aus LockWatch von 2015 zurück.</li>
+				<li>Teile deine Zifferblätter mit deinen Freunden: Inspiriert von watchOS 7 kannst du nun deine Zifferblätter (inklusive Anpassungen) mit deinen Freunden teilen. Sogar Drittanbieter-Zifferblätter werden unterstützt! Sollte ein Zifferblatt mal nicht installiert sein, werden automatisch Cydia, Zebra oder Sileo geöffnet, damit du das fehlende Paket installieren kannst. HINWEIS: Zifferblatt-Dateien aus iOS 14 werden derzeit nicht unterstützt.</li>
+				<li>Behebt einen Fehler, der dazu führt, dass die Modell-Auswahl in den Einstellungen doppelt angezeigt wird. (Danke an /u/Guanran928)</li>
+				<li>Behebt (wieder einmal) den Fehler, dass die Komplikation "Datum" in einigen Zifferblättern nicht angezeigt wird. Das war allein mein Fehler, nachdem ich die Komplikationen überarbeitet hatte. (Danke an Damian V)</li>
+				<li>Verbesserung der Animationen.</li>
+				<li>Weitere, kleine Fehlerbehebungen.</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
 			<p><small>24. August 2020</small></p>
 			
