--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,6 +29,29 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0b4-u1</h2>
+			<p><small>September 7, 2020</small></p>
+			
+			<p>This build fixes an issue where settings would be reset unexpectedly, caused by mixing up paths intended for the iOS Simulator with those for the release build.</p>
+		</article>
+		
+		<article class="markdown-body">
+			<h2>Version 2.0b4</h2>
+			<p><small>September 7, 2020</small></p>
+			
+			<p>As of Beta 4, LockWatch 2 is now officially considered feature complete. Thank you to everyone who has reported issues in the beta phase so far! Because of you, LockWatch 2 is near perfect! This beta introduces the last two features: Third-party watch faces, as well as sharing watch faces, inspired by watchOS 7.</p>
+			
+			<ul>
+				<li>Support for third-party watch faces! You can now install third-party watch faces using a package manager of your choice. This marks also the return of the "Binary" watch face, one of the first external watchfaces of LockWatch from 2015.</li>
+				<li>Share watch faces with your friends: Inspired by watchOS 7, you can now share watch faces (including customization) with your friends. Even third-party watch faces are supported! And if a watch face is missing, LockWatch will automatically open Cydia, Zebra or Sileo for you to install its package. NOTE: Watch face files from iOS 14 are currently not supported.</li>
+				<li>Fixes an issue where the model selection appears twice in Settings. (Thank you, /u/Guanran928)</li>
+				<li>Fixes an issue (again) where the "Date" complication wouldn't show up in various faces. This is my fault all alone, after I reworked complications. (Thanks you, Damian V)</li>
+				<li>Improvement to animations.</li>
+				<li>Various improvements.</li>
+			</ul>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b3-u2</h2>
 			<p><small>August 24, 2020</small></p>
 
