Forgot to commit updated changelog

--- a/LockWatch2Preferences/Resources/de.lproj/index.html
+++ b/LockWatch2Preferences/Resources/de.lproj/index.html
@@ -29,6 +29,16 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f</h2>
+			<p><small>15. September 2020</small></p>
+			
+			<p>Hier ist sie: die finale Version von LockWatch 2 – live und in Farbe! Nachdem fast ein Jahr dran gearbeitet wurde, verlässt LockWatch 2 nun offiziell die Beta-Phase. Und obwohl ich der letzten Beta bereits erwähnt habe, dass die Funktionen nun alle vollzählig sind, hat sich in dieser finalen Version nun doch noch ein Feature eingeschlichen: Gehäuse und Armbänder! (Derzeit werden nur Series 4 und Series 5 unterstützt. Richtet eure Beschwerden bitte daher an Apple, weil die Assets für die Series 3 nicht zur verfügung gestellt werden)</p>
+			<p>Diese Idee existierte bereits, als ich am Onboarding-Feature in Beta 3 gearbeitet habe, aber sie wurde relativ schnell wieder verworfen. Nun stellte sich aber heraus (dank <a href="https://twitter.com/Yznco">@Yznco</a> bei Twitter), dass eine solche Funktion tatsächlich Freunde finden würde. Also, hier ist sie. Abgesehen davon gibt es in dieser Version nichts neues. Es wurde lediglich eine Entwickler-Einstellung entfernt, die nur in der Beta-Phase benutzt wurde.</p>
+			<p>An dieser Stelle möchte ich erneut bei all denjenigen bedanken, die mich während der Beta-Phase unterstützt haben – moralisch, finanziell, oder durch Fehlerberichte – denn nur durch eure Hilfe konnte LockWatch 2 auf einem solchen Qualitätslevel fertiggestellt werden. Als Geschenk wird LockWatch 2 nicht nur bei Team FESTIVAL veröffentlicht, sondern auch sehr bald bei Dynastic – völlig kostenlos. (Updates erscheinen trotzdem zunächtst bei Team FESTIVAL)</p>
+			<p>Zum Abschluss bleibt nur eines übrig: Habt Spaß! Erzählt euren Freunden, dass ihr eine Apple Watch auf eurem iPhone-Sperrbildschirm habt. Unterstützt die Entwicklung auch weiterhin durch eure Fehlerberichte, denn auch wenn LockWatch 2 an sich fertig ist, so gibt es immer etwas, das verbessert werden kann. (*hust*Komplikationen*hust*)</p>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b4-u1</h2>
 			<p><small>7. September 2020</small></p>
 			
