--- a/LockWatch2Preferences/Resources/en.lproj/index.html
+++ b/LockWatch2Preferences/Resources/en.lproj/index.html
@@ -29,6 +29,16 @@
 	
 	<body>
 		<article class="markdown-body">
+			<h2>Version 2.0f</h2>
+			<p><small>September 15 2020</small></p>
+			
+			<p>Here it is: the final version of LockWatch 2 – live and in color! After working on it for almost a whole year, LockWatch 2 is now officially leaving its beta phase. And even after reporting the "feature completeness" in the last beta, one additional feature made it to the final version: cases and bands! (Only Series 4 and Series 5 supported. Please send your complaints to Apple for not providing Series 3 assets)</p>
+			<p>This idea already existed while I was working on Onboarding in Beta 3, but I discarded it pretty quickly. Now it turned out (thanks to <a href="https://twitter.com/Yznco">@Yznco</a> on Twitter) that there are actually people who would like this feature. So, here it is. Apart from that, there's nothing new in this version. I've just removed a developer setting that was intended to be used in the beta phase.</p>
+			<p>At this point I'd like to say "thank you" again to everyone who supported me – morally, financially, or through issue reports – it's because of you that LockWatch 2 could be completed at this quality level. As a gift, LockWatch 2 will not only be released on Team FESTIVAL, but also soon on Dynastic – at no additional cost. (Updates will still be released on Team FESTIVAL first)</p>
+			<p>As a closing note, there's only one thing left to say: Have fun! Tell your friends you've got an Apple Watch on your iPhone lock screen. Continue supporting development through issue report, because even though LockWatch 2 is finished per se, there's always room for improvement. (*cough*Complications*cough*)</p>
+		</article>
+		
+		<article class="markdown-body">
 			<h2>Version 2.0b4-u1</h2>
 			<p><small>September 7, 2020</small></p>
 			
